--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,13 @@ body {
   padding: 0 15px;
 }
 
+.container2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100px; /* set a fixed height for the container */
+}
+
 /* Header */
 
 header {
@@ -30,20 +37,29 @@ header {
 }
 
 .logo {
-  font-size: 2rem;
-  font-weight: bold;
-  color: #333;
-  float: left;
+  position: absolute;
+  left: 25%;
+  top: 0;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.logo img {
+  height: 100%;
+  width: auto;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 
 .btn {
   display: inline-block;
-  padding: 10px 20px;
+  padding: 20px 40px;
   background-color: #0070f3;
   color: #fff;
   text-decoration: none;
-  border-radius: 4px;
+  border-radius: 10px;
   transition: background-color 0.3s ease-in-out;
 }
 
@@ -51,9 +67,33 @@ header {
   background-color: #0052cc;
 }
 
+.active-button {
+  display: inline-block;
+  padding: 20px 40px;
+  background-color: #0070f3;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 10px;
+  transition: background-color 0.3s ease-in-out;
+  opacity: 0.4;
+  cursor: not-allowed;
+}
+
+.inactive-button {
+  display: inline-block;
+  padding: 20px 40px;
+  background-color: #0070f3;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 10px;
+  transition: background-color 0.3s ease-in-out;
+}
+
 /* Hero section */
 
 .hero {
+  position: relative;
+  /* other styles */
   background-image: url(lineCAM_J_QAD_login.jpg);
   background-size: cover;
   background-position: center;
@@ -87,15 +127,18 @@ footer p {
   margin: 0;
 }
 
+
 .hero-text {
-  font-size: 2rem;
-  font-weight: bold;
+  font-size: 2.5rem;
+  height: 100%; 
   color: hsla(355, 66%, 55%, 0.932);
   margin-top: 30px;
+  position: absolute;
+  left: 35%;
 }
 
 .flicker {
-  animation: flicker-effect 1s linear infinite alternate;
+  animation: flicker-effect 0.5s linear infinite alternate;
 }
 
 @keyframes flicker-effect {
@@ -103,7 +146,7 @@ footer p {
     opacity: 1;
   }
   50% {
-    opacity: 0.5;
+    opacity: 0.3;
   }
   100% {
     opacity: 1;
